@@ -1,3 +1,8 @@
+2013-03-11  Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* opcode/nios2.h (OP_RDPRS): New define.
+	(OP_MATCH_RDPRS): Likewise.
+
 2013-03-01  Cary Coutant  <ccoutant@google.com>
 
 	* dwarf2.h (enum dwarf_sect): New enum type.
